--- a/ServiceExample/app/src/main/AndroidManifest.xml
+++ b/ServiceExample/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ServiceExample">
+        <service android:name=".MyService"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
