Added second activity integration

--- a/WorkerManagerExample/app/src/main/AndroidManifest.xml
+++ b/WorkerManagerExample/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.WorkerManagerExample">
         <activity
+            android:name=".TimeSelectActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
