--- a/CoffinSimulator/app/src/main/AndroidManifest.xml
+++ b/CoffinSimulator/app/src/main/AndroidManifest.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.gpsexample">
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.example.coffinsimulator">
 
     <application
         android:allowBackup="true"
@@ -12,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GPSExample">
+        android:theme="@style/Theme.CoffinSimulator">
         <activity
             android:name=".MainActivity"
             android:exported="true">
